--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,10 @@ python :
 install:
   - pip install -r requirements.txt
 
+branches:
+  only:
+    - master
+    - develop
+
 script:
   - nosetests tests/
